add member ecp request api
